--- a/frontend/src/src/locales/en-US.json
+++ b/frontend/src/src/locales/en-US.json
@@ -1,1 +1,11 @@
-{}
+{
+    "common": {
+        "submit": "Submit",
+        "cancel": "Cancel",
+        "close": "Close",
+        "confirm": "Confirm",
+        "delete": "Delete",
+        "edit": "Edit",
+        "save": "Save"
+    }
+}
