--- a/frontend/src/src/locales/zh-TW.json
+++ b/frontend/src/src/locales/zh-TW.json
@@ -1,1 +1,11 @@
-{}
+{
+    "common": {
+        "submit": "送出",
+        "cancel": "取消",
+        "close": "關閉",
+        "confirm": "確認",
+        "delete": "刪除",
+        "edit": "編輯",
+        "save": "儲存"
+    }
+}
